Zero Core: Middle Version 3: 移除 Fn